change start game endpoint to return full game
